[package]
name = "vested-dxd-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.8", features = ["derive"] }
chrono = "0.4.19"
eyre = "0.6.7"
lazy_static = "1.4.0"
serde = { version = "1.0.117", features = ["derive"] }